Revert "Updated files.include Biome configuration"
This reverts commit 0dfca74455b8aa14ce97116730a6afaf861a13db.

--- a/biome.json
+++ b/biome.json
@@ -7,8 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [".next"],
-    "include": ["**/*.ts", "**/*.tsx", "**/*.json", "**/*.mjs", "**/*.css"]
+    "ignore": [".next"]
   },
   "formatter": {
     "enabled": true,
