--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18"
