--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@prisma/client": "^6.0.1",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18"
@@ -24,6 +25,7 @@
     "cypress": "^13.16.0",
     "lefthook": "^1.8.4",
     "postcss": "^8",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
