Removing auth0 stupid anti-e2e library

--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-AUTH0_SECRET=""
-AUTH0_BASE_URL=""
-AUTH0_ISSUER_BASE_URL=""
-AUTH0_CLIENT_ID=""
-AUTH0_CLIENT_SECRET=""
+APP_URL=""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
 
 DATABASE_URL="file:./debitum.db"
