--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@prisma/client": "^6.1.0",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
