--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "http-status-codes": "^2.3.0",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
